--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desi full video</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-      <link rel="icon" type="image/x-icon" href="https://files.catbox.moe/pog62l.jpeg">
+      <link rel="icon" type="image/x-icon" href="https://files.catbox.moe/aevp4o.jpeg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <!-- Background Video -->
     <video autoplay loop muted playsinline id="bg-video">
-        <source src="https://files.catbox.moe/aevp4o.jpeg" type="video/mp4">
+        <source src="https://files.catbox.moe/yznlc0.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
     </video>
     
