--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
     <div class="password-container">
         <img style="width:100px;border-radius:10px;"src="https://files.catbox.moe/aevp4o.jpeg" alt="No internet">
-        <h1 class="login-title">Login Desi Chudai</h1>
+        <h1 class="login-title">Login Desi Ch*d*</h1>
 
         <div class="input-box">
             <i class='bx bxs-user'></i>
